tests/neg-macros/i4396b.scala
import scala.quoted._
def test(using Quotes) = {
  '{ case class Foo() } // error
}